Implement the various button rules
I'm not too sure what was meant by Toggle +- 1, etc.

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
       >This page contains webassembly and javascript content, please enable
       javascript in your browser.</noscript
     >
+    <img src="idea.jpg" alt="photo of the discussed plans" />
     <script src="./bootstrap.js"></script>
   </body>
 </html>
