Start work on randomly assigning a mapping

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
       <button>10</button>
     </div>
     <button id="reset">⚠️ Reset</button>
+    <p id="mapping"></p>
     <noscript
       >This page contains webassembly and javascript content, please enable
       javascript in your browser.</noscript
